--- a/league-stats/public/index.html
+++ b/league-stats/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="nav"></div>
+    <div style="position:fixed" id="nav"></div>
     <div style="padding-top:48px" id="root"></div>
     <!--
       This HTML file is a template.
